--- a/estilos.css
+++ b/estilos.css
@@ -21,12 +21,25 @@ header h1{
     width: 640px;
     height: 300px;
     margin: auto;
-    background-color: blueviolet;
+    background-color: red;
     align-content: center;
     text-align: center;
 }
-.texto{
+.play{
+    background-color: greenyellow;
+}
+.footer{
+    margin-top: 5%;
     min-height: 1200px;
-    background-color: chocolate;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: space-around;
 
+}
+
+.cuadrado{
+width: 30%;
+height: 300px;
+margin: auto;
+background-color: aqua;
 }
