--- a/estilos.css
+++ b/estilos.css
@@ -18,12 +18,13 @@ header h1{
 }
 
 .video{
+    display: flex;
     width: 640px;
-    height: 300px;
+    height: 360px;
     margin: auto;
+    margin-top: 15%;
     background-color: red;
-    align-content: center;
-    text-align: center;
+   
 }
 .play{
     background-color: greenyellow;
